# ICB-workflow

./: LICENSE  README.md  kallisto.xyz  my_icb_test.csv  pyproject.toml
examples/: README.md  compound1.csv  compound2.csv  compound3.csv  compound4.csv  compound5.csv  compound6.csv  run_example.sh
icb/: constant.py  types.py  utility.py
icb/data/: db.csv
icb/helper/: bash.py  chem_helper.py  kallisto_helper.py  rdkit_helper.py  utility.py  xtb_helper.py
icb/helper/db/: smiles.py
icb/helper/ml/: data.py
icb/helper/ts/: store.py
icb/main/: header.py  main.py  results.py
icb/task/: create_barriers.py  create_boltzmann_weight_image.py  create_ch.py  create_graph_deltas.py  create_ml_deltas.py  create_ts.py  create_xtb_deltas.py  optimize_structure.py  sort_ch.py
