[tool.poetry]
name = "sobo"
version = "0.2.0"
description = "Regioselectivity of the iridium-catalyzed borylation."
authors = ["Caldeweyher, Eike <e.caldeweyher@gmail.com>"]
readme = "README.md"
packages = [{include = "icb"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.3"
commonmark = "0.9.1"
joblib = "1.2.0"
kallisto = "1.0.9"
pandas = "1.5.1"
pillow = "9.3.0"
pygments = "2.13.0"
python-dateutil = "2.8.2"
pytz = "2022.6"
rdkit = "2022.9.1"
rich = "12.6.0"
scikit-learn = "1.1.1"
scipy = "1.9.2"
six = "1.16.0"
threadpoolctl = "3.1.0"

[tool.poetry.scripts]
sobo = "icb.main.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
